--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/SparkIO Thermal Shield/History
-/SparkIO Thermal Shield/Project Logs for SparkIO Thermal Shield
+/SparkIO Thermal Shield/History/*
+/SparkIO Thermal Shield/Project Logs for SparkIO Thermal Shield/*
 /SparkIO Thermal Shield/*.SchDocPreview
